kubernetes/04_postgre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
      - name: psql
        image: postgres:13-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data/
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
