kubernetes/05_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udayapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udayapp
  template:
    metadata:
      labels:
        app: udayapp
    spec:
      containers:
      - name: udayapp
        image: udaytc/cadastro-cliente:1.3
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: clients-volume
          mountPath: /static/clients/
        - name: images-volume
          mountPath: /static/images/
      volumes:
      - name: clients-volume
        persistentVolumeClaim:
          claimName: clients-pvc
      - name: images-volume
        persistentVolumeClaim:
          claimName: images-pvc
