kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadastro-cliente-deployment
  labels:
    app: cadastro-cliente
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cadastro-cliente
  template:
    metadata:
      labels:
        app: cadastro-cliente
    spec:
      containers:
      - name: cadastro-cliente
        image: udaytc/cadastro-cliente:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: static-files
          mountPath: /app/static
      volumes:
      - name: static-files
        emptyDir: {}
