kubernetes/06_service.yaml
# Service app
apiVersion: v1
kind: Service
metadata:
  name: udayapp-service
spec:
  selector:
    app: udayapp
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort  # Você pode usar LoadBalancer dependendo do seu ambiente.

---

# Service Postgre
apiVersion: v1
kind: Service
metadata:
  name: psql-service
spec:
  selector:
    app: psql
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
