kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: udayacademy-service
spec:
  selector:
    app: udayacademy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
